# Git.Python-Sync

./: .gitignore  LICENSE  Makefile  README.org  pyproject.toml  test_check_repo_status.py
check_repo_status/: __init__.py  __main__.py  multi_repo_status.py
src/check_repo_status/: __init__.py  __main__.py  multi_repo_status.py
tests/: test_check_repo_status.py
